remove linkedin specific plugin implementation files.replace settings.gradle, build.gradle with default dependencies. Comment out external dependencies